--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Joey Thinkful : Software Engineer</title>
+    <title>Carlos Thinkful : Software Engineer</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"
         type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
     <header>
-        <h1>Name</h1>
+        <div class="logo">
+            <h1>Carlos Blandino</h1>
+        </div>
         <nav>
             <ul id="menu">
                 <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
